--- a/microservice-usuarios/src/main/resources/application.properties
+++ b/microservice-usuarios/src/main/resources/application.properties
@@ -16,7 +16,7 @@ springdoc.swagger-ui.disable-swagger-default-url=true
 springdoc.swagger-ui.path=/swagger-ui.html
 
 ## Spring Data Source ##
-spring.datasource.url=jdbc:postgresql://localhost:5432/usuarios-fryers
+spring.datasource.url=jdbc:postgresql://localhost:5432/usuarios-fryers-db
 spring.datasource.username=postgres
 spring.datasource.password=gustavo10
 spring.datasource.driver-class-name=org.postgresql.Driver
