restTemplate and circuit breaker

--- a/microservice-usuarios/src/main/resources/application.properties
+++ b/microservice-usuarios/src/main/resources/application.properties
@@ -28,3 +28,27 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.defer-datasource-initialization=true
 
+# Resiliece4j Configuration
+# Habilita la exposición de detalles de salud para los circuit breakers
+management.endpoint.health.show-details=always
+# Habilita la funcionalidad de salud para los circuit breakers
+management.health.circuitbreakers.enabled=true
+
+# Configuración predeterminada del circuit breaker
+resilience4j.circuitbreaker.configs.default.register-health-indicator=true
+# Tamaño de la ventana deslizante para el circuit breaker (número de llamadas consideradas)
+resilience4j.circuitbreaker.configs.default.sliding-window-size=2
+# Número mínimo de llamadas antes de que el circuit breaker pueda calcular el estado
+resilience4j.circuitbreaker.configs.default.minimum-number-of-calls=5
+# Duración de espera en el estado abierto antes de intentar una recuperación
+resilience4j.circuitbreaker.configs.default.wait-duration-in-open-state=5s
+# Número permitido de llamadas en el estado medio abierto
+resilience4j.circuitbreaker.configs.default.permitted-number-of-calls-in-half-open-state=5
+# Habilita la transición automática del estado abierto al estado medio abierto
+resilience4j.circuitbreaker.configs.default.automatic-transition-from-open-to-half-open-enabled=true
+# Umbral de tasa de falla (porcentaje) que activa el circuit breaker
+resilience4j.circuitbreaker.configs.default.failure-rate-threshold=50
+
+# Tipo de ventana deslizante (basada en el conteo de llamadas)
+resilience4j.circuitbreaker.configs.shared.sliding-window-type=count_based
+
