--- a/microservices-clientes/src/main/resources/application.properties
+++ b/microservices-clientes/src/main/resources/application.properties
@@ -26,3 +26,19 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.defer-datasource-initialization=true
 
+# Resiliece4j Configuration
+management.endpoint.health.show-details=always
+management.health.circuitbreakers.enabled=true
+
+resilience4j.circuitbreaker.configs.default.register-health-indicator=true
+resilience4j.circuitbreaker.configs.default.sliding-window-size=2
+resilience4j.circuitbreaker.configs.default.minimum-number-of-calls=5
+resilience4j.circuitbreaker.configs.default.wait-duration-in-open-state=5s
+resilience4j.circuitbreaker.configs.default.permitted-number-of-calls-in-half-open-state=5
+resilience4j.circuitbreaker.configs.default.automatic-transition-from-open-to-half-open-enabled=true
+resilience4j.circuitbreaker.configs.default.failure-rate-threshold=50
+
+# Possible values count_base, time_base
+resilience4j.circuitbreaker.configs.shared.sliding-window-type=count_based
+
+
