--- a/microservices-clientes/pom.xml
+++ b/microservices-clientes/pom.xml
@@ -94,6 +94,12 @@
             <groupId>org.eclipse.angus</groupId>
             <artifactId>jakarta.mail</artifactId>
         </dependency>
+        <!--MercadoPagoAPI-->
+        <dependency>
+            <groupId>com.mercadopago</groupId>
+            <artifactId>sdk-java</artifactId>
+            <version>2.1.7</version>
+        </dependency>
 
 
     </dependencies>
