--- a/microservices-clientes/src/main/resources/application.properties
+++ b/microservices-clientes/src/main/resources/application.properties
@@ -41,4 +41,5 @@ resilience4j.circuitbreaker.configs.default.failure-rate-threshold=50
 # Possible values count_base, time_base
 resilience4j.circuitbreaker.configs.shared.sliding-window-type=count_based
 
-
+# MercadoPago API
+mercadopago.accessToken= TEST-62675755742135-042516-0d2dc937f227f4d169eee72c5819eee9-1143140421
